--- a/app/forwardingNote/forwardigNote.html
+++ b/app/forwardingNote/forwardigNote.html
@@ -111,7 +111,7 @@
                     <label>Commodity</label>
                     <!--<input tabindex="12" type="text" ng-model="currentFn.comments" />-->
                     <div class="selectSty1 flt_L" style="height:35px;">
-                    <label style="margin-top:0; width:250px;"><span><select ng-model="currentFn.comments"></select></span></label>
+                    <label style="margin-top:0; width:250px;"><span><select ng-model="currentFn.commodity" ng-options="cd.name as cd.name for cd in commodities"></select></span></label>
                     </div>
                     <div class="clrBt"></div>
                 </div>
@@ -161,7 +161,7 @@
         	<div class="clrBt"></div>
 		<div class="textBox" style="width:auto;">
         	<label>Address:</label>
-            <span>{{getCompleteAddress(currentFn.country)}}</span>
+            <span>{{getCompleteAddress(currentFn.company)}}</span>
             	<div class="clrBt"></div>
         </div>
         <div class="clrBt"></div>
@@ -230,8 +230,8 @@
         </div>
         <div class="clrBt"></div>
 		<div class="textBox flt_L">
-        	<label>Comments:</label>
-            <span style="text-transform: uppercase">{{currentFn.comments}}</span>
+        	<label>Commodity:</label>
+            <span style="text-transform: uppercase">{{currentFn.commodity}}</span>
             	<div class="clrBt"></div>
         </div>
 
