--- a/app/dispatch/dispatch.html
+++ b/app/dispatch/dispatch.html
@@ -301,7 +301,12 @@
             <div class="logoPMain"><img src="/com/images/logo.png" alt="" title="" style="width:120px;" /></div>
             <div class="adrsLP">Kalpataru Tower Patna Gaya Road Elahibagh<br/> Patna-800007</div>
           </div>
-
+          <div class="textBox flt_L" style="width:296px;">
+            <label>Serial No::</label>
+            <span>{{currentFn.id}}</span>
+            <div class="clrBt"></div>
+          </div>
+          <div class="clrBt"></div>
           <div style="border:1px solid #ddd; border-radius:5px; box-shadow:0 0 2px #ddd; margin-bottom:10px; padding:8px;">
             <div style="border-bottom:1px solid #e1e1e1; color:#02486d; font-size:15px; margin:0; padding:0 0 7px 5px; text-shadow:1px 1px 1px #ddd; text-transform:uppercase;">Company</div>
             <div class="textBox flt_L" style="width:296px;">
@@ -317,7 +322,7 @@
             <div class="clrBt"></div>
             <div class="textBox" style="width:auto;">
               <label>Address:</label>
-              <span>{{getCompleteAddress(currentFn.country)}}</span>
+              <span>{{getCompleteAddress(currentFn.company)}}</span>
               <div class="clrBt"></div>
             </div>
             <div class="clrBt"></div>
@@ -386,8 +391,8 @@
           </div>
           <div class="clrBt"></div>
           <div class="textBox flt_L">
-            <label>Comments:</label>
-            <span style="text-transform: uppercase">{{currentFn.comments}}</span>
+            <label>Commodity:</label>
+            <span style="text-transform: uppercase">{{currentFn.commodity}}</span>
             <div class="clrBt"></div>
           </div>
 
