--- a/app/dispatch/dispatch.html
+++ b/app/dispatch/dispatch.html
@@ -297,30 +297,10 @@
         <h3 class="titleCB" style="background:#d3d3d3; padding:5px 10px; color:#814b27;"><span class="confTxt flt_L" style="margin-top:5px;">Forwarding Note</span> <div class="logoPMain flt_R"><img src="/com/images/logo.png" alt="" title="" style="width:100px;" /></div><div class="clrBt"></div></h3>
         <div class="formViewStyleM">
         	<div class="logoPartMain">
-                <div class="compNameCodeM"><span class="compName">Company Name</span> <span class="compCode">(Code:5225)</span></div>
-                <div class="adrsLP">Kalpataru Tower Patna Gaya Road Elahibagh<br/> Patna-800007</div>
+                <div class="compNameCodeM"><span class="compName">{{currentFn.company.name}}</span> <span class="compCode"> ({{currentFn.company.code}})</span></div>
+                <div class="adrsLP">{{getCompleteAddress(currentFn.company)}}</div>
             </div>
 
-<!--          <div style="border:1px solid #ddd; border-radius:5px; box-shadow:0 0 2px #ddd; margin-bottom:10px; padding:8px;">
-            <div style="border-bottom:1px solid #e1e1e1; color:#02486d; font-size:15px; margin:0; padding:0 0 7px 5px; text-shadow:1px 1px 1px #ddd; text-transform:uppercase;">Company</div>
-            <div class="textBox flt_L" style="width:296px;">
-              <label>Name:</label>
-              <span>{{currentFn.company.name}}</span>
-              <div class="clrBt"></div>
-            </div>
-            <div class="textBox flt_L" style="width:296px; padding-right:0; padding-left:8px;">
-              <label>Code:</label>
-              <span>{{currentFn.company.code}}</span>
-              <div class="clrBt"></div>
-            </div>
-            <div class="clrBt"></div>
-            <div class="textBox" style="width:auto;">
-              <label>Address:</label>
-              <span>{{getCompleteAddress(currentFn.company)}}</span>
-              <div class="clrBt"></div>
-            </div>
-            <div class="clrBt"></div>
-          </div>-->
 
           <div class="textBox" style="width:auto;">
             <label>Serial No::</label>
@@ -396,7 +376,7 @@
             <div class="clrBt"></div>
           </div>
           <div class="textBox flt_L" style="padding-right:0; padding-left:8px; width:230px;">
-            <label>Dummy Text:</label>
+            <label>FRIEGHT TO BE BILLED </label>
             <span style="text-transform:uppercase;"></span>
             <div class="clrBt"></div>
           </div>
