--- a/app/dispatches/dispatches.html
+++ b/app/dispatches/dispatches.html
@@ -91,7 +91,7 @@
         <div class="clrBt"></div>
 
 <div class="confirmBoxStyle" ng-if="isDispatchView"> <!-- Van Details Popup Box Style Start -->
-  <div id="vanDetails_id" class="confirmBoxOuter" style="margin:40px auto 0; width:880px;">
+  <div id="vanDetails_id" class="confirmBoxOuter printStyleDispcs" style="margin:40px auto 0; width:880px;">
     <div class="confirmBoxStyleInner">
       <h3 class="titleCB"><span class="confTxt flt_L">Van Details</span> <span  id="close_btn_id" ng-click="closeDispatch()" class="windowCloseIcon flt_R"></span><div class="clrBt"></div></h3>
 
