--- a/app/forwardingNote/forwardigNote.html
+++ b/app/forwardingNote/forwardigNote.html
@@ -143,8 +143,8 @@
                     <div class="logoPartMain">
                         <div class="compNameCodeM"><span class="compName">{{currentFn.company.name}}</span> <span class="compCode"> ({{currentFn.company.code}})</span></div>
                         <div class="adrsLP">{{getCompleteAddress(currentFn.company)}}</div>
-                        <div class="adrsLP">VAT : {{currentFn.company.vat}}</div>
-                        <div class="adrsLP">TIN/CST : {{currentFn.company.cst_or_tin}}</div>
+                        <div class="adrsLP">VAT : {{currentFn.company.vat}} &nbsp;&nbsp; CST : {{currentFn.company.cst_or_tin}}</div>
+                        <div class="adrsLP"></div>
                     </div>
                     <!--          <div class="textBox" style="width:auto;">
                                 <label>Serial No::</label>
@@ -198,12 +198,12 @@
                     <div class="clrBt"></div>
                     <div class="textBox flt_L">
                         <label>Bill No:</label>
-                        <span>{{currentFn.billNumber}}</span>
+                        <span>{{currentFn.billNo}}</span>
                         <div class="clrBt"></div>
                     </div>
                     <div class="textBox flt_L" style="padding-right:0; padding-left:8px; width:230px;">
                         <label>Bill Value:</label>
-                        <span>{{totalBillValue}}</span>
+                        <span>{{calculateBillValue()}}</span>
                         <div class="clrBt"></div>
                     </div>
                     <div class="clrBt"></div>
