--- a/app/dispatch/dispatch.html
+++ b/app/dispatch/dispatch.html
@@ -154,7 +154,7 @@
 
           <div style="margin:10px 0 0 0;" class="buttonMain flt_R">
             <button type="button" class="flt_L" ng-click="save()" style="margin-right:10px;">Save</button>
-            <button type="button" ng-click="save(true)" class="flt_L">Save & Print</button>
+            <!--<button type="button" ng-click="save(true)" class="flt_L">Save & Print</button>-->
           </div>
         </section>
         <div class="clrBt"></div>
